# stereovision-app

./: .clang-format  .gitignore  CMakeLists.txt  auxutils.cpp  auxutils.h  calibration.cpp  calibration.h  facedetection.cpp  facedetection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  takephoto.cpp  takephoto.h  tensorflow.cpp  tensorflow.h
dnnData/: face_detection_short_range_int8.tflite
documentation/: README.md
